syntax = "proto3";

package go.micro.srv.pay;

service Pay {
    rpc WxPay(WxPayRequest) returns (WxPayResponse) {}
}

message WxPayRequest {
    int64 uid = 1;
    int64 wid = 2;
    int64 item = 3;
    int64 price = 4;
    string callback = 5;
    string clientip = 7;
}

message WxPayResponse {
    string sign = 1;
    string pack = 2;
    string nonce = 3;
    int64 ts = 4;
    string signtype = 5;
}
